--- a/static/css/main.less
+++ b/static/css/main.less
@@ -126,6 +126,7 @@
 @import (less) "history.less";
 @import (less) "offices.less";
 @import (less) "press-resources.less";
+@import (less) "preview.less";
 
 
 /* Demo-specific styles
