--- a/static/css/preview.less
+++ b/static/css/preview.less
@@ -62,6 +62,11 @@
 
         text-align: center;
     }
+
+    &_img {
+        display: inline-block;
+        max-width: 250px;
+    }
 }
 
 .pv-nav {
