--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,23 +42,18 @@
             </ul>
             <ul class="footer_nav-list">
                 <li class="list_item">
-                    <a class="list_link" href="/contact-us/">
-                        Contact us
-                    </a>
-                </li>
-                <li class="list_item">
                     <a class="list_link" href="/newsroom/">
                         Newsroom
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        Careers
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        Español
+                        TBD Content
                     </a>
                 </li>
             </ul>
@@ -71,78 +66,78 @@
                 <div class="footer_nested-col-group">
                     <div class="footer_col">
                         <h2 class="h6">
-                            Researchers
+                            TBD Content
                         </h2>
                         <ul class="footer_list">
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Datasets
+                                    TBD Content
                                 </a>
                             </li>
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Reports
+                                    TBD Content
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer_col">
                         <h2 class="h6">
-                            Developers
+                            TBD Content
                         </h2>
                         <ul class="footer_list">
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    APIs
+                                    TBD Content
                                 </a>
                             </li>
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Open source projects
+                                    TBD Content
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer_col">
                         <h2 class="h6">
-                            Educators
+                            TBD Content
                         </h2>
                         <ul class="footer_list">
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Toolkits
+                                    TBD Content
                                 </a>
                             </li>
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Online learning
+                                    TBD Content
                                 </a>
                             </li>
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Brochures
+                                    TBD Content
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer_col">
                         <h2 class="h6">
-                            Regulated entities
+                            TBD Content
                         </h2>
                         <ul class="footer_list">
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Regulations
+                                    TBD Content
                                 </a>
                             </li>
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Notice and comment
+                                    TBD Content
                                 </a>
                             </li>
                             <li class="list_item">
                                 <a class="list_link list_link__disabled">
-                                    Compliance guides
+                                    TBD Content
                                 </a>
                             </li>
                         </ul>
@@ -188,32 +183,32 @@
             <ul class="footer_long-list">
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        Privacy policy & legal notices
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        Accessibility
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        Plain writing
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        No FEAR Act
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        FOIA
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
-                        Ombudsman
+                        TBD Content
                     </a>
                 </li>
                 <li class="list_item">
@@ -222,7 +217,7 @@
                     when that address is finalized.
                     -->
                     <a class="list_link list_link__disabled">
-                        Open Government
+                        TBD Content
                     </a>
                 </li>
             </ul>
