--- a/_includes/email-subscribe-form.html
+++ b/_includes/email-subscribe-form.html
@@ -1,7 +1,5 @@
 
 {% macro render(query, code) %}
-{% set url_path = request.path.lower() %}
-{% set is_blog_or_event = ('/blog/' in url_path) or ('/events/' in url_path) %}
 
 <form class="reveal-on-focus"
       id="email-subscribe-form"
@@ -36,7 +34,8 @@
     </div>
     {% endif %}
     #}
-    {% if query and is_blog_or_event == false -%}
+    {# TODO: Remove "and false" when topics are available for email sign-ups. #}
+    {% if query and false -%}
     <div class="form-group reveal-on-focus_content u-clearfix">
     {% for category in query.possible_values_for('category')|sort(attribute='key') -%}
     {% set govdelivery_categories = [
