--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -100,6 +100,7 @@
 
         &-label {
             display: block;
+            font-size: unit(16px / @base-font-size-px, em);
             margin-bottom: unit(8px / @base-font-size-px, em);
             .webfont-demi();
 
