Fixes DF-1678 - updates beta disclaimer text
Fixes DF-1678 - updates beta disclaimer text.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -143,8 +143,8 @@
             This beta site is a work in progress.
         </div>
         <p class="beta-banner_desc expandable_content">
-            We're prototyping new designs. Expect some errors and inaccuracies.
-            Accurate information continues at
+            We’re prototyping new designs. Things may not work as expected.
+            Our regular site continues to be at
             <a href="http://www.consumerfinance.gov/">www.consumerfinance.gov</a>.
         </p>
         <button class="btn beta-banner_btn expandable_target" id="beta-banner_btn">
