Ran `yo cf` to update project to match current bureau project organization
- Adds /src and /dist to separate source assets and built assets
- Updates the Gruntfile for new dir org
- Updates the .gitignore for new dir org
- Updates the package.json manifest to include latest tested deps
- Updates the package.json manifest to include project details
- Updates the bower.json manifest to include latest tested deps

NOTE: THIS IS NOT YET TESTED AND READY FOR DEPLOYMENT

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -74,8 +74,8 @@
 -->
 
 {% block css %}
-<!--[if lt IE 9]>      <link rel="stylesheet" href="/static/css/main.ie.css"> <![endif]-->
-<!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/css/main.css"> <!--<![endif]-->
+<!--[if lt IE 9]>      <link rel="stylesheet" href="/dist/static/css/main.ie.css"> <![endif]-->
+<!--[if gt IE 8]><!--> <link rel="stylesheet" href="/dist/static/css/main.css"> <!--<![endif]-->
 {% endblock css %}
 
 <!--
@@ -184,7 +184,7 @@
     specific to a single page or section of the site, all custom JS should be added to src/static/js/app.js.
 -->
 {% block javascript %}
-<script src="/static/js/main.min.js"></script>
+<script src="/dist/static/js/main.min.js"></script>
 {% endblock javascript %}
 
 </body>
