Revision for Code Review

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1032,21 +1032,21 @@
 
 
 // Size of cicular background.
-@size: 1.5em;
+@icon-size: 1.5em;
 
 .char-icon {
     &:before {
         display: inline-block;
         box-sizing: border-box;
-        width: @size;
-        height: @size;
+        width: @icon-size;
+        height: @icon-size;
         border-radius: 100%;
         margin-right: 0.375em;
         position: relative;
         background: @green;
         color: @white;
         .webfont-medium();
-        line-height: @size;
+        line-height: @icon-size;
         text-align: center;
     }
 
