Revisions for Code Review

--- a/static/css/post.less
+++ b/static/css/post.less
@@ -421,12 +421,12 @@
 
     // Spacing has been eyeballed to be 40px.
     p ~ h2, p ~ .h2 {
-        margin-top: unit(31px / @base-font-size-px, em)
+        margin-top: unit(31px / @base-font-size-px, em);
     }
 
     // Spacing has been eyeballed to be 40px.
     p ~ h3, p ~ .h3 {
-        margin-top: unit(35px / @base-font-size-px, em)
+        margin-top: unit(35px / @base-font-size-px, em);
     }
 
     // Spacing has been eyeballed to be 15px.
@@ -436,12 +436,12 @@
 
     // Spacing has been eyeballed to be 15px.
     p ~ h5, p ~ .h5 {
-        margin-bottom: unit(6px / @base-font-size-px, em)
+        margin-bottom: unit(6px / @base-font-size-px, em);
     }
 
     // Spacing has been eyeballed to be 15px.
     p ~ h6, p ~ .h6 {
-        margin-bottom: unit(5px / @base-font-size-px, em)
+        margin-bottom: unit(5px / @base-font-size-px, em);
     }
 }
 
