--- a/static/css/budget.less
+++ b/static/css/budget.less
@@ -5,51 +5,11 @@
 
 .budget_page-content {
 
+    .list__download();
+
     h4 {
         // Negative offset is to accommodate for the gap added by line-height.
         margin-top: unit( ((@grid_gutter-width * 2) - 15) / @base-font-size-px, em);
-    }
-
-    &.financial-report,
-    &.performance-plan,
-    &.funding-request {
-        ul {
-            .list__links();
-            .list__icons();
-
-            li {
-                .list__links .list_item();
-                .list__icons .list_item();
-                margin-left: 0;
-            }
-
-            a {
-                .list_link();
-                .jump-link();
-
-                // Override the jump-link padding, left, display values.
-                // TODO: Explore creating a jump-link-icon pattern.
-                // TODO: Avoid using !important if possible.
-                padding-left: 1.25em !important;
-                left: 0;
-                display: block;
-
-                &:before {
-                    .list__icons .list_icon();
-                    .cf-icon();
-                    content: "\e406";
-                    color: @pacific;
-
-                    // Override the jump-link line-height.
-                    line-height: @base-line-height;
-
-                    .respond-to-max(599px, {
-                        // Add jump-link padding offset on small screens.
-                        top: unit(10px / @base-font-size-px, em);
-                    });
-                }
-            }
-        }
     }
 
     &.funding-request {
@@ -57,7 +17,7 @@
             margin-top: unit(35px / @base-font-size-px, em);
         }
 
-        a span {
+        a time {
             color: @black;
             padding-right: .5em;
 
