--- a/static/css/business.less
+++ b/static/css/business.less
@@ -6,6 +6,10 @@
 // Used to set padding to 30px
 @padding: unit(@grid_gutter-width / @base-font-size-px, em);
 
+.business_page-content {
+    .list__download();
+}
+
 .block__business-step {
     .respond-to-min(899px, {
         margin-bottom: 0;
@@ -30,9 +34,8 @@
     .expandable_header-right {
         .node_expander();
         .respond-to-max(@mobile-max, {
-            margin-top: -@base-font-size-px;   
+            margin-top: -@base-font-size-px;
         });
         top: @base-font-size-px;
     }
 }
-
