Filter Breaking on Space

--- a/_includes/post-macros.html
+++ b/_includes/post-macros.html
@@ -842,7 +842,6 @@
         {%- if is_filter_selected(field, value) %}
             selected
         {%- endif -%}
-            >
-        {{ value }}
+        {{ '>' | safe ~ value }}
     </option>
 {% endmacro %}
