--- a/static/css/contact-us.less
+++ b/static/css/contact-us.less
@@ -3,10 +3,20 @@
    Contact us page.
    ========================================================================== */
 
-.helpful-terms_header {
-    .h5();
-    margin-right: unit(6px / @font-size, em);
-    vertical-align: middle;
+.helpful-terms {
+    &_header {
+        .h5();
+        margin-right: unit(6px / @font-size, em);
+        vertical-align: middle;
+    }
+
+    &_list {
+        .respond-to-min(600px, {
+            .list__horizontal();
+
+            display: inline-block;
+        });
+    }
 }
 
 .type-and-filter_message {
