Change the name "Watchroom" to "Featured Topic"

--- a/_includes/posts-paginated.html
+++ b/_includes/posts-paginated.html
@@ -32,7 +32,7 @@
             <div class="media_image-container post-summary-image">
                 <div class="post-summary-image_container">
                     <img class="media_image"
-                         src="{{ post.thumbnail.images.fj_thumbnail.url }}"
+                         src="{{ post.thumbnail.images.full.url }}"
                          alt="{{ post.thumbnail.alt_text }}">
                 </div>
             </div>
