DF_1686_404_Error_Page

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -120,6 +120,7 @@
 @import (less) "budget.less";
 @import (less) "business.less";
 @import (less) "event.less";
+@import (less) "error.less";
 @import (less) "bureau.less";
 @import (less) "bureau-structure.less";
 @import (less) "contact-us.less";
