DF-1436_Privacy_page

--- a/_includes/email-subscribe-form.html
+++ b/_includes/email-subscribe-form.html
@@ -17,6 +17,11 @@
                name="email"
                placeholder="example@mail.com">
     </div>
+    <p class="short-desc u-mt10">
+      The information you provide will permit the Consumer Financial 
+      Protection Bureau to process your request or inquiry.
+      <a href="/privacy-policy">See More</a>
+    </p>
     {# Uncomment this and remove condition to test
     {% if 'is_event' %}
     <div class="form-group reveal-on-focus_content u-clearfix">
