--- a/src/static/css/cf-enhancements.less
+++ b/src/static/css/cf-enhancements.less
@@ -8,3 +8,662 @@
 // Whenever building enhancements or changes to existing CF components, write them here
 // to work out the details before contributing them back to a Capital Framework component
 //
+
+
+/* topdoc
+  name: Code styles
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: .inline-code
+      markup: |
+        <code class="inline-code">code { color: red; }</code>
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.inline-code {
+    display: inline-block;
+    padding: unit(3px / 14px, em) unit(5px / 14px, em);
+    border-radius: 4px;
+    background: @gray-10;
+    color: @black;
+    font-size: unit(14px / @base-font-size-px, em);
+}
+
+
+/* topdoc
+  name: Width utilities
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: Percent-based
+      markup: |
+        <div class="u-w95pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w95pct</code>
+        </div>
+        <div class="u-w85pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w85pct</code>
+        </div>
+        <div class="u-w65pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w65pct</code>
+        </div>
+        <div class="u-w55pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w55pct</code>
+        </div>
+        <div class="u-w45pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w45pct</code>
+        </div>
+        <div class="u-w35pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w35pct</code>
+        </div>
+        <div class="u-w15pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w15pct</code>
+        </div>
+        <div class="u-w5pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w5pct</code>
+        </div>
+      notes:
+        - "Inline styles are for demonstration purposes only, please don't use
+           them."
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.u-w95pct  { width: 95%; }
+.u-w85pct  { width: 85%; }
+.u-w65pct  { width: 65%; }
+.u-w55pct  { width: 55%; }
+.u-w45pct  { width: 45%; }
+.u-w35pct  { width: 35%; }
+.u-w15pct  { width: 15%; }
+.u-w5pct   { width:  5%; }
+
+
+/* topdoc
+  name: respond-to-print() (mixin)
+  notes:
+    - "This mixin allows us to easily write styles that target both
+       `@media print` and `.print`."
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: Usage
+      codenotes:
+        - |
+          // Example Less
+          .example {
+              color: @gray;
+
+              .respond-to-print({
+                  color: @black;
+              });
+          }
+
+          // Exports to
+          .example {
+              color: #75787B;
+          }
+          @media print {
+              .example {
+                  color: #101820;
+              }
+          }
+          .print .example {
+              color: #101820;
+          }
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.respond-to-print(@rules) {
+    @media print {
+        @rules();
+    }
+    .print & {
+        @rules();
+    }
+}
+
+
+
+/* topdoc
+  name: Superheader print styles
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: .superheader
+      markup: |
+        <div class="print">
+            <h1 class="superheader">
+                A big green header
+            </h1>
+        </div>
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.superheader {
+    .respond-to-print({
+        color: @green;
+    });
+}
+
+/* topdoc
+  name: Centered on mobile utility
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: .u-centered-on-mobile
+      markup: |
+        <div>
+            <div class="u-centered-on-mobile" style="width:100px;height:100px;background-color:green;">
+                Block centered on mobile
+            </div>
+            <p class="u-centered-on-mobile">Paragraph centered on mobile</p>
+        </div>
+      notes:
+        - "Sometimes content (parts/all of a media block, for example)
+           should be centered on mobile, but not on larger screen sizes."
+        - "This implementation conflates inline & block element centering,
+           though they could be made into separate classes."
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.respond-to-max(@mobile-max {
+    .u-centered-on-mobile {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+});
+
+
+/* topdoc
+  name: Tables
+  family: cfgov-cf-enhancements
+  notes:
+    - "Updated table styling that needs to get ported to cf-core pending Design
+       Manual approval."
+    - "At screens smaller than 960px wide the table cells stack."
+  patterns:
+    - name: Default table
+      markup: |
+        <table>
+            <thead>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
+                </tr>
+            </tbody>
+        </table>
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+th,
+td {
+    padding: unit(10px / @base-font-size-px, em)
+             unit(10px / @base-font-size-px, em);
+    background: @white;
+    vertical-align: top;
+
+    // Needed to override styles from cf-core.
+    tbody > tr:nth-child(odd) > & {
+        background: inherit;
+    }
+}
+
+thead th {
+    .padded-header();
+}
+
+tbody {
+    border-top: 1px solid @gray-50;
+
+    th {
+        .webfont-medium();
+    }
+
+    tr {
+        border-bottom: 1px solid @gray-50;
+    }
+}
+
+.respond-to-max(959px {
+    table {
+        width: 100%;
+    }
+
+    thead {
+        th {
+            box-sizing: border-box;
+            display: block;
+            width: 100% !important;
+        }
+    }
+
+    tbody {
+        th,
+        td {
+            box-sizing: border-box;
+            display: block;
+            width: 100% !important;
+        }
+        th + th,
+        td + td {
+            padding-top: 0;
+        }
+    }
+});
+
+
+/* topdoc
+  name: Simple Table
+  family: cfgov-cf-enhancements
+  notes:
+    - Extends the above stacked tables for sm devices
+    - Hides the thead
+    - Styles first td as if it were the thead
+    - Allows any other td to be styled as a heading level 4
+    - Adds data-label attr for small td labels above td content
+  patterns:
+    - name: Collapsable Table
+      markup: |
+        <table class="simple-table">
+            <thead>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td class="simple-table_row-heading">Lorem ipsum dolor.</td>
+                    <td data-label="Lorem">Lorem ipsum dolor.</td>
+                    <td data-label="Ipsum">Lorem ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td class="simple-table_row-heading">Lorem ipsum dolor.</td>
+                    <td data-label="Lorem">Lorem ipsum dolor.</td>
+                    <td data-label="Ipsum">Lorem ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor.</td>
+                    <td class="simple-table_row-heading">Lorem ipsum dolor.</td>
+                    <td data-label="Lorem">Lorem ipsum dolor.</td>
+                    <td data-label="Ipsum">Lorem ipsum dolor.</td>
+                </tr>
+            </tbody>
+        </table>
+  tags:
+    - cfgov-cf-enhancements
+*/
+.simple-table {
+    .respond-to-max(959px, {
+
+        font-size: 14px;
+
+        thead {
+            display: none;
+        }
+
+        tbody {
+            border-top: none;
+        }
+
+        tr {
+            border-bottom: none;
+        }
+
+        td:first-child {
+            .h4();
+
+            background-color: @gray-5;
+            margin-bottom: 10px;
+        }
+
+        td[data-label] {
+            padding-bottom: 20px;
+
+            &:before {
+                .h6();
+
+                display: block;
+
+                content: attr(data-label);
+            }
+        }
+
+        &_row-heading {
+            .h4();
+
+            margin-bottom: 0;
+        }
+    });
+}
+
+
+
+
+/* topdoc
+  name: cf-grid column dividers
+  family: cfgov-cf-enhancements
+  notes:
+    - "cf-grid columns use left and right borders for fixed margins which means
+       it's not possible to set visual left and right borders directly on them.
+       Instead we can use the :before pseudo element and position it absolutely.
+       The added benefit of doing it this way is that the border spans the
+       entire height of the next parent using `position: relative;`. This means
+       that the border will always match the height of the tallest column in the
+       row."
+  patterns:
+    - name: Classes
+      codenotes:
+        - .grid_column__top-divider
+        - .grid_column__left-divider
+    - name: Usage
+      codenotes:
+        - |
+          .my-column-1-2 {
+
+              // Creates a column that spans 6 out of 12 columns.
+              .grid_column(6, 12);
+
+              // Add a top divider only at screen 599px and smaller.
+              .respond-to-max(599px {
+                  .grid_column__top-divider();
+              });
+
+              // Add a left divider only at screen 600px and larger.
+              .respond-to-min(600px, {
+                  .grid_column__left-divider();
+              });
+
+          }
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.grid_column__top-divider {
+    margin-top: unit((@grid_gutter-width * 2) / @base-font-size-px, em);
+    &:before {
+        content: "";
+        display: block;
+        height: 1px;
+        margin-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
+        background-color: @gray-50;
+    }
+}
+
+.grid_column__left-divider {
+    border-left-width: @grid_gutter-width;
+
+    &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 1px;
+        display: block;
+        background-color: @gray-50;
+        margin-left: -@grid_gutter-width;
+    }
+}
+
+
+/* topdoc
+    name: Expandable header modifier
+    family: cfgov-cf-enhancements
+    patterns:
+    - name: expandable_header__jump-link (modifier)
+      markup: |
+        <button class="expandable_header expandable_header__jump-link expandable_target">
+            <span class="expandable_header-left expandable_label">
+                Expandable Header
+            </span>
+            <span class="expandable_header-right expandable_link">
+                <span class="expandable_cue-open">
+                    <span class="cf-icon cf-icon-plus-round"></span>
+                </span>
+                <span class="expandable_cue-close">
+                    <span class="cf-icon cf-icon-minus-round"></span>
+                </span>
+            </span>
+        </button>
+      codenotes:
+        - |
+          .expandable_header__jump-link
+      notes:
+        - "This modifier styles the expandable header as a jump link on mobile
+           screens. Can be used for mobile-only expandables."
+        - "Use the `button` element with `.expandable_header`. to make the whole
+           header clickable."
+    tags:
+    - cfgov-cf-enhancements
+*/
+
+.expandable_header__jump-link {
+
+    .respond-to-max(599px, {
+        display: block;
+        width: 100%;
+        padding: unit(10px / @base-font-size-px, em) 0;
+        border: dotted @pacific;
+        border-width: 1px 0;
+
+        .expandable_label,
+        .expandable_link {
+            color: @pacific;
+        }
+
+        &:hover,
+        &.hover {
+            border-style: solid;
+            border-color: @pacific-50;
+
+            .expandable_label,
+            .expandable_link {
+                color: @pacific-50;
+            }
+        }
+
+        &:focus,
+        &.focus {
+            border-style: solid;
+            outline: thin dotted;
+        }
+
+        &:active,
+        &.active {
+            border-style: solid;
+            border-color: @navy;
+
+            .expandable_label,
+            .expandable_link {
+                color: @navy;
+            }
+        }
+    });
+
+}
+
+.expandable_header-left {
+  width: 78%;
+}
+
+.expandable_header-right {
+  width: 22%;
+  text-align: right;
+}
+
+
+/* topdoc
+  name: Icon list modifier
+  family: cf-typography
+  notes:
+    - "Set up a list with icons on the left, in place of bullets."
+  patterns:
+    - name: Default example
+      markup: |
+        <ul class="list list__icons">
+            <li class="list_item">
+                <span class="cf-icon cf-icon-email list_icon"></span>
+                List item 1
+            </li>
+            <li class="list_item">
+                <span class="cf-icon cf-icon-phone list_icon"></span>
+                List item 2
+            </li>
+            <li class="list_item">
+                <span class="cf-icon cf-icon-fax list_icon"></span>
+                List item 3
+            </li>
+        </ul>
+  tags:
+    - cf-typography
+*/
+
+// TODO: Move multi-line list__icons outside of budget and procurement pages.
+// Currently, they conflict with the default list__links style
+// when the classes are placed directly in markup, for example
+// see the lists on /newsroom/press-resources/.
+.budget_page-content,
+.business_page-content {
+    .list__icons {
+        .list__unstyled();
+
+        .list_item {
+            margin-left: 2em;
+            position: relative;
+        }
+
+        .list_icon {
+            position: absolute;
+            width: 1.5em;
+            left: 0;
+            top: 0;
+            line-height: @base-line-height;
+            .list__icons .list_icon__left();
+        }
+    }
+}
+
+
+/* topdoc
+  name: List icon left modifier
+  family: cf-typography
+  notes:
+    - "Left align the icons in an icon list."
+  patterns:
+    - name: Default example
+      markup: |
+        <ul class="list list__icons">
+            <li class="list_item">
+                <span class="cf-icon cf-icon-technology list_icon list_icon__left"></span>
+                List item 1
+            </li>
+            <li class="list_item">
+                <span class="cf-icon cf-icon-phone list_icon list_icon__left"></span>
+                List item 2
+            </li>
+            <li class="list_item">
+                <span class="cf-icon cf-icon-money list_icon list_icon__left"></span>
+                List item 3
+            </li>
+        </ul>
+  tags:
+    - cf-typography
+*/
+
+.list__icons {
+    .list_icon__left {
+        // TODO: Remove the !important once this lands in cf-typography.
+        text-align: left !important;
+    }
+}
+
+/* topdoc
+  name: List icon center modifier
+  family: cf-typography
+  notes:
+    - "Center align the icons in an icon list."
+  patterns:
+    - name: Default example
+      markup: |
+        <ul class="list list__icons">
+            <li class="list_item">
+                <span class="cf-icon cf-icon-technology list_icon list_icon__center"></span>
+                List item 1
+            </li>
+            <li class="list_item">
+                <span class="cf-icon cf-icon-phone list_icon list_icon__center"></span>
+                List item 2
+            </li>
+            <li class="list_item">
+                <span class="cf-icon cf-icon-money list_icon list_icon__center"></span>
+                List item 3
+            </li>
+        </ul>
+  tags:
+    - cf-typography
+*/
+
+.list__icons {
+    .list_icon__center {
+        text-align: center;
+    }
+}
+
+/* topdoc
+  name: List icon right modifier
+  family: cf-typography
+  notes:
+    - "Right align the icons in an icon list."
+  patterns:
+    - name: Default example
+      markup: |
+        <ul class="list list__icons">
+            <li class="list_item list_icon__right">
+                <span class="cf-icon cf-icon-technology list_icon"></span>
+                List item 1
+            </li>
+            <li class="list_item list_icon__right">
+                <span class="cf-icon cf-icon-phone list_icon"></span>
+                List item 2
+            </li>
+            <li class="list_item list_icon__right">
+                <span class="cf-icon cf-icon-money list_icon"></span>
+                List item 3
+            </li>
+        </ul>
+  tags:
+    - cf-typography
+*/
+
+.list__icons {
+    .list_icon__right {
+        text-align: right;
+    }
+}
+
+/* topdoc
+    name: EOF
+    eof: true
+*/
