--- a/src/static/css/main.less
+++ b/src/static/css/main.less
@@ -9,6 +9,71 @@
 @import (less) "../../vendor/normalize-css/normalize.css";
 @import (less) "../../vendor/normalize-legacy-addon/normalize-legacy-addon.css";
 
+// @import third party plugins
+@import (less) "../../vendor/chosen/chosen.css";
+
+// Chosen overrides
+.chosen-container {
+    font-size: 1em;
+
+    a {
+        border-bottom: none !important;
+    }
+
+    &,
+    * {
+        box-shadow: none !important;
+        font-family: Arial, sans-serif;
+    }
+
+    &.chosen-container-multi .chosen-choices li.search-field input[type=text] {
+        width: 90% !important;
+        height: auto;
+        margin: 0;
+        padding: unit(6px / @base-font-size-px, em);
+        color: @gray;
+    }
+
+    &.chosen-container .chosen-drop {
+        margin-top: 1px;
+        border-color: @pacific;
+        outline: 1px solid @pacific;
+    }
+
+    &.chosen-container-multi .chosen-choices {
+        border-color: @gray-80;
+        background-color: @white;
+        background-image: none !important;
+    }
+
+    &.chosen-container-multi.chosen-container-active .chosen-choices {
+        border-color: @pacific;
+        outline: 1px solid @pacific;
+    }
+
+    &.chosen-container-multi .chosen-choices li.search-choice {
+        margin-left: 3px;
+        border-color: @gray-80;
+        background-color: @gray-10;
+        background-image: none !important;
+        font-size: unit(13px / @base-font-size-px, em);
+        line-height: unit(12 / 13);
+    }
+
+    &.chosen-container-multi .chosen-drop .result-selected {
+        color: @gray;
+    }
+
+    .highlighted {
+        background-color: @pacific;
+        background-image: none !important;
+    }
+
+    &.chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
+        top: 3px;
+    }
+}
+
 // Import the combined Capital Framework component file that was created by `grunt compile-cf`.
 @import (less) "capital-framework.less";
 
@@ -21,95 +86,57 @@
 // Import the Capital Framework enhancements
 @import (less) "cf-enhancements.less";
 
-// We've generated some sample rules for you. They're used with the index.html file.
-// Please delete them before starting your project.
+/* Base patterns
+   ========================================================================== */
 
-.intro-message {
-    padding: 1em;
-    background: @expandable__padded-bg;
-    .webfont-medium();
-}
+@import (less) "forms.less";
+@import (less) "lists.less";
+@import (less) "media.less";
+@import (less) "meta.less";
+@import (less) "misc.less";
+@import (less) "summary.less";
 
-.feature-header {
-    display: inline-block;
-    padding-bottom: unit(10px / @base-font-size-px, em);
-    margin-bottom: unit(30px / @base-font-size-px, em);
-    border-bottom: 4px solid @content_bar;
 
-    &_name {
-        display: inline-block;
-        margin: 0;
-        line-height: 1;
-    }
-    &_docs {
-        display: inline-block;
-        vertical-align: top;
-        .webfont-regular();
-    }
-    &_name + &_docs {
-        margin-left: 1em;
-    }
-}
+/* Amalgamated patterns
+   ========================================================================== */
 
-.color-demo {
-    .grid_column( 4 );
-    height: 30px;
-}
+@import (less) "activity.less";
+@import (less) "blog-docs.less";
+@import (less) "post.less";
+@import (less) "calendar-icon.less";
+@import (less) "modification-date.less";
 
-.color-demo__btn-bg {
-    background-color: @btn-bg;
-}
 
-.color-demo__btn-secondary-bg {
-    background-color: @btn__secondary-bg;
-}
+/* Template pieces
+   ========================================================================== */
 
-.color-demo__btn-disabled-bg {
-    background-color: @btn__disabled-bg;
-}
+@import (less) "nav-secondary.less";
+@import (less) "header.less";
+@import (less) "footer.less";
 
-.sample-grid {
-    .grid_nested-col-group();
-}
 
-.sample-grid_col:before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1em;
-    background: @btn-bg;
-}
+/* Page-specific styles
+   ========================================================================== */
 
-.sample-grid_col-1 {
-    .grid_column( 1 );
-}
+@import (less) "beta.less";
+@import (less) "budget.less";
+@import (less) "business.less";
+@import (less) "event.less";
+@import (less) "bureau.less";
+@import (less) "bureau-structure.less";
+@import (less) "contact-us.less";
+@import (less) "history.less";
+@import (less) "offices.less";
+@import (less) "press-resources.less";
 
-.sample-grid_col-3 {
-    .grid_column( 3 );
-}
 
-.sample-grid_col-4 {
-    .grid_column( 4 );
-}
+/* Demo-specific styles
+   ========================================================================== */
 
-.sample-grid_col-6 {
-    .grid_column( 6 );
-}
+@import (less) "demo.less";
 
-.typography-demo {
-    &_item {
-        .u-clearfix();
-    }
-    &_item-header {
-        float: left;
-        width: unit(200px / @base-font-size-px, em);
-        margin-right: @grid_gutter-width;
-        text-align: right;
-    }
-    .spec {
-        .webfont-regular();
-        color: #75787B;
-        font-size: 0.875em;
-    }
-}
 
+/* Print styles
+   ========================================================================== */
+
+@import (less) "print.less";
